--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,4 @@
-/*Mobile*/
-
-
-.f-container {
+ .f-container {
     margin-right: auto;
     margin-left: auto;
     text-align: center;
@@ -75,33 +72,50 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 40px;
 }
 
 .f-title {
-    max-width: 279px;
-    color: #fbfbfb;
-    text-align: center;
-    font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 100%;
-    letter-spacing: -0.36px;
-    display: block;
+    font-size: 18px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #fbfbfb;
+    max-width: 277px;
+    margin-bottom: 82px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
+}
+
+.f-link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(27, 65, 75, 0.5);
+    border: none;
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fbfbfb;
+    padding-left: 24px;
+    padding-right: 25px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .f-items {
     display: flex;
-    justify-content: center;
     gap: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 82px;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     padding-bottom: 20px;
 }
+
 
 .adv-privacy {
     color: rgba(251, 251, 251, 0.4);
@@ -112,6 +126,7 @@
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 0.36px;
+
 }
 
 .f-item:focus {
@@ -148,7 +163,6 @@
 @media screen and (min-width: 768px) {
     .f-container {
         max-width: 736px;
-        height: 418px;
         flex-shrink: 0;
         border-radius: 24px 24px 0px 0px;
         background: #1b414b;
@@ -174,9 +188,10 @@
 
     .social-icon {
         display: flex;
-        margin-right: 48px;
+
         margin-top: 0;
         padding-top: 50px;
+
     }
 
     .f-title {
@@ -242,7 +257,7 @@
     .f-container {
         padding: 0;
         max-width: 1230px;
-        height: 418px;
+
         flex-shrink: 0;
         border-radius: 24px 24px 0px 0px;
         background: #1b414b;
