--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -18,6 +18,11 @@
     opacity: 1;
     pointer-events: auto;
 }
+.mobile-menu-container{
+background-color: #0e1823;
+padding: 16px 20px 40px;
+display: flex;
+}
 
 .header-container {
   display: flex;
@@ -38,6 +43,10 @@
 }
 .mob-menu-icon-close {
   fill: #055545;
+}
+.mobile-menu-list{
+    display: flex;
+    gap: 4px;
 }
 
 @media only screen and (min-width: 768px) {
