--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -13,40 +13,89 @@
     transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu.in-open {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
+.mobile-menu.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
-.mobile-menu-container{
-background-color: #0e1823;
-padding: 16px 20px 40px;
-display: flex;
+.mobile-menu-container {
+  background-color: #0e1823;
+  padding: 16px 20px 40px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.header-container {
+.mobile-menu-header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid #fbfbfb;
   border-radius: 8px;
-  width: 335px;
+  width: 100%;
   height: 42px;
   background-color: #fbfbfb;
-  margin-bottom: 201px;
+  padding-inline: 20px 26px;
+  margin-bottom: auto;
 }
-.logo-header {
+.mob-menu-logo-header {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.03em;
   color: #1b414b;
+  padding-block: 12px;
 }
 .mob-menu-icon-close {
   fill: #055545;
 }
-.mobile-menu-list{
-    display: flex;
-    gap: 4px;
+.mobile-menu-nav-list {
+  width: 91px;
+  margin: 0 auto;
+}
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+}
+.mob-menu-social {
+  display: flex;
+  width: 88px;
+  gap: 8px;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.mobile-menu-list-item:last-child {
+  text-align: center;
+}
+.icon-svg-mob-menu {
+  fill: #fbfbfb;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-svg-mob-menu:hover {
+  fill: rgba(251, 251, 251, 0.8);
+}
+
+.data-menu-address {
+  margin-top: auto;
+}
+.mobile-menu-btn {
+  display: block;
+  padding-block: 15px;
+  font-weight: 400;
+  font-size: 9px;
+  line-height: 1.3;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fbfbfb;
+  border-radius: 8px;
+  width: 91px;
+  height: 40px;
+  background-color: #1b414b;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu-btn:hover {
+  background-color: rgba(27, 65, 75, 0.5);
 }
 
 @media only screen and (min-width: 768px) {
