--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,20 +1,57 @@
 <div class="mobile-menu is-open">
   <div class="mobile-menu-container">
-        <div class="header-container">
-            <a class="logo-header" href="./index.html">yachtjet</a>
-            <button class="mob-menu" type="button">
-              <svg class="mob-menu-icon-close" width="28" height="28" data-menu-open>
-                <use href="/img/icons.svg#icon-"></use>
-              </svg>
-            </button>
-        </div>
-        <nav>
+    <div class="mobile-menu-header-container">
+      <a class="mob-menu-logo-header" href="./index.html">yachtjet</a>
+      <button class="mob-menu" type="button">
+        <svg class="mob-menu-icon-close" width="16" height="16" data-menu-open>
+          <use href="/img/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+    </div>
+    <nav class="mobile-menu-nav-list">
       <ul class="mobile-menu-list">
-        <li><a class="btn-menu" href="#about">About</a></li>
-        <li><a class="btn-menu" href="#yachts">Yachts</a></li>
-        <li><a class="btn-menu" href="#reviews">Reviews</a></li>
-        <li><a class="btn-menu" href="#" data-modal-open>Order Service</a></li>
+        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#about">About</a></li>
+        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#yachts">Yachts</a></li>
+        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#reviews">Reviews</a></li>
+        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#" data-modal-open>Order Service</a></li>
       </ul>
     </nav>
+      <address class="data-menu-address">
+      <ul class="mob-menu-social">
+        <li>
+          <a
+            class="mob-menu-link-social"
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+          >
+            <svg class="icon-svg-mob-menu" width="19" height="19">
+              <use href="/img/icons.svg#icon-insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="">
+          <a
+            class="mob-menu-link-social"
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+          >
+            <svg class="icon-svg-mob-menu" width="20" height="20">
+              <use href="/img/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="">
+          <a
+            class="mob-menu-link-social"
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+          >
+            <svg class="icon-svg-mob-menu" width="20" height="20">
+              <use href="/img/icons.svg#icon-fb"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </address>
   </div>
 </div>
