--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,110 +1,107 @@
 .mobile-menu {
   position: fixed;
+  background-color: #0e1823;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0e1823;
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open-mobile-menu {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
-}
-.mobile-menu-container {
-  background-color: #0e1823;
-  padding: 16px 20px 40px;
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
-.mobile-menu-header-container {
+.menu-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid #fbfbfb;
   border-radius: 8px;
-  width: 100%;
+  width: 335px;
   height: 42px;
   background-color: #fbfbfb;
-  padding-inline: 20px 26px;
-  margin-bottom: auto;
+  margin-top: 16px;
+  margin-bottom: 201px;
 }
-.mob-menu-logo-header {
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.logo-mobile {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.03em;
   color: #1b414b;
-  padding-block: 12px;
 }
-.mob-menu-close{
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    display: inline-flex;
+
+.close-btn-icon {
+  width: 28px;
+  height: 28px;
+  fill: #003d36;
+  cursor: pointer;
 }
-.mob-menu-icon-close {
-  fill: #055545;
-}
-.mobile-menu-nav-list {
-  width: 91px;
-  margin: 0 auto;
-}
-.mobile-menu-list {
+
+.menu-button-nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 4px;
-}
-.mob-menu-social {
-  display: flex;
-  width: 88px;
   gap: 8px;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-.mobile-menu-list-item:last-child {
-  text-align: center;
-}
-.icon-svg-mob-menu {
-  fill: #fbfbfb;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-svg-mob-menu:hover {
-  fill: rgba(251, 251, 251, 0.8);
+  align-items: center;
+  width: 284px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.data-menu-address {
-  margin-top: auto;
-}
-.mobile-menu-btn {
-  display: block;
-  padding-block: 15px;
+.menu-link {
+  background: rgba(27, 65, 75, 0.5);
+  width: 100px;
+  height: 44px;
+  border-radius: 8px;
+  text-align: center;
+  transition: background-color 0.3s ease;
   font-weight: 400;
-  font-size: 9px;
+  font-size: 12px;
   line-height: 1.3;
   text-transform: uppercase;
-  text-align: center;
   color: #fbfbfb;
-  border-radius: 8px;
-  width: 91px;
-  height: 40px;
-  background-color: #1b414b;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.mobile-menu-btn:hover {
-  background-color: rgba(27, 65, 75, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 4px;
 }
 
-@media only screen and (min-width: 768px) {
+.menu-link:hover {
+  background-color: #1b414b;
+}
+
+.menu-social {
+  margin-top: auto;
+}
+
+.social-list {
+  margin-top: auto;
+  margin-bottom: 20px;
+  display: flex;
+  gap: 8px;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  justify-content: center;
+}
+
+.social-icon {
+  width: 24px;
+  height: 24px;
+  fill: #fbfbfb;
+  transition: fill-opacity 0.3s ease;
+}
+
+.social-link:hover .social-icon {
+  fill-opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
   }
