--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -3,7 +3,7 @@
     <div class="mobile-menu-header-container">
       <a class="mob-menu-logo-header" href="./index.html">yachtjet</a>
       <button class="mob-menu-close" type="button">
-        <svg class="mob-menu-icon-close" width="16" height="16" data-menu-open>
+        <svg class="mob-menu-icon-close" width="16" height="16">
           <use href="/img/icons.svg#icon-close"></use>
         </svg>
       </button>
