--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -37,7 +37,7 @@
     </div>
     <div class="section-advantages-photo-wrapper">
         <picture>
-          <source srcset="/img/advantages-deskbig.jpg 1x, img/advantages-deskbig@2x.jpg 2x" media="(min-width: 1440px)">
+          <source srcset="/img/advantages-deskbig.jpg 1x, /img/advantages-deskbig@2x.jpg 2x" media="(min-width: 1440px)">
           <source srcset="/img/advantages-desk.jpg 1x, /img/advantages-desk@2x.jpg 2x" media="(min-width: 1280px)">
           <source srcset="/img/advantages-tab.jpg 1x, /img/advantages-tab@2x.jpg 2x" media="(min-width: 768px)">
            <source srcset="/img/advantages-mob.jpg 1x, /img/advantages-mob@2x.jpg 2x" media="(max-width: 767px)">
