--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,6 +8,6 @@
       from our top-of-the-line yachts and embark on an unforgettable journey
       surrounded by breathtaking views and state-of-the-art amenities.
     </p>
-    <a href="#yachtst" class="cta-btn">Yacht rental</a>
+    <a href="#form" class="cta-btn">Yacht rental</a>
   </div>
 </section>
