--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,11 +1,14 @@
 /* --- АДАПТИВНА ВЕРСТКА --- */
 /*  Мобільна версія (до 767px) */
-
 .about-us {
   padding-top: 0;
   margin: 0 auto;
 }
+.about-us-container {
+  margin-bottom: 80px;
+}
 .about-us-content {
+  width: 100%;
   max-width: 335px;
   border-radius: 24px 24px 7% 7%;
   background: #fbfbfb;
@@ -32,8 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 295px;
-  height: 187px;
+  width: 100%;
 }
 .text-title-about {
   font-weight: 400;
@@ -64,8 +66,8 @@
 }
 /* Планшетна версія (768px ) */
 @media only screen and (min-width: 768px) {
-  .section {
-    padding-bottom: 75px;
+  .about-us-container {
+    margin-bottom: 150px;
   }
   .about-us-content {
     max-width: 704px;
@@ -96,7 +98,7 @@
   }
   .info-about {
     flex-direction: row;
-    padding: 50px;
+    padding: 50px 50px 100px;
     gap: 189px;
   }
   .title-about {
@@ -107,9 +109,6 @@
   }
 }
 @media only screen and (min-width: 1440px) {
-  .section {
-    padding-bottom: 75px;
-  }
   .about-us-content {
     max-width: 1340px;
   }
