--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -5,29 +5,30 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
+  margin: 0;
 }
 
-ul,ol {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 a {
-color: currentColor;
-text-decoration: none;
+  color: currentColor;
+  text-decoration: none;
 }
 
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 
-img{
-    display: block;
-    max-width: 100%;
-    height:auto;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
-body{
+body {
   padding-top: 35px;
 }
