--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -3,9 +3,29 @@
 .about-us {
   padding-top: 0;
   margin: 0 auto;
+position: relative;
+top: -60px;
 }
+@media only screen and (min-width: 768px){
+.about-us{
+  top: -68px;
+}
+}
+@media only screen and (min-width: 1280px){
+.about-us {
+  top: -55px;
+}
+}
+
+@media only screen and (min-width: 1440px){
+.about-us {
+  top: -40px;
+}
+}
+
 .about-us-container {
   margin-bottom: 80px;
+  
 }
 .about-us-content {
   width: 100%;
@@ -22,6 +42,7 @@
   flex-direction: column;
   padding: 40px 20px;
   gap: 40px;
+  
 }
 .title-about {
   font-weight: 500;
@@ -68,6 +89,7 @@
 @media only screen and (min-width: 768px) {
   .about-us-container {
     margin-bottom: 150px;
+    
   }
   .about-us-content {
     max-width: 704px;
