--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,7 +7,12 @@
   width: 335px;
   height: 42px;
   background-color: #fbfbfb;
-  
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0 30px;
+  z-index: 1000;
 }
 .logo-header {
   font-weight: 500;
@@ -34,6 +39,7 @@
   .header-container {
     width: 704px;
     height: 48px;
+    top: 32px;
    
   }
   .mob-menu {
@@ -63,7 +69,6 @@
     line-height: 1.3;
     text-transform: uppercase;
     text-align: center;
-    color: #fbfbfb;
     padding-left: 24px;
     padding-right: 25px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
