--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -7,6 +7,15 @@ width: 100%;
   padding-top: 260px;
   padding-bottom: 243px;
 }
+@media screen and (min-width: 375px){ .hero {
+    background-image: url('/img/hero-m.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    padding-top: 260px;
+    padding-bottom: 243px;
+  }}
 
 @media screen and (min-resolution: 2x) {
   .box-image {
