--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -43,7 +43,8 @@
         
 }
 
-.f-item {
+.f-link {
+    padding: 15px 25px 15px 24px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,8 +95,8 @@
     padding-left: 24px;
     padding-right: 25px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-*/
+}*/
+
 .f-items {
     display: flex;
     gap: 20px;
@@ -116,12 +117,12 @@
     letter-spacing: 0.36px;
 }
 
-.f-item:focus {
+.f-link:focus {
     color: #1b414b;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.f-item:hover {
+.f-link:hover {
     color: #1b414b;
     background-color: #fbfbfb;
     transition: backround-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -129,22 +130,25 @@
 
 .social-icon-item {
     fill: #fbfbfb;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon-link {
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.social-icon-link:focus {
-    stroke: rgba(251, 251, 251, 0.8);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.social-icon-link:hover .social-icon-item,
+.social-icon-link:focus .social-icon-item{
+    fill: #cbcdd0;
+}
+/*.social-icon-link:focus {
+    
 }
 
 .social-icon-link:hover {
-    stroke: rgba(251, 251, 251, 0.8);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #cbcdd0;
+    transition: fill all 0.3s ease-in-out;
 }
+*/
 
 /* Tablets (from 768px) */
 @media screen and (min-width: 768px) {
@@ -201,7 +205,7 @@
        margin-left: 110px;
     }
 
-    .f-item {
+    .f-link {
         width: 91px;
         height: 40px;
         flex-shrink: 0;
@@ -268,7 +272,7 @@
     .social-icon {
         display: flex;
         padding-left: 0;
-        margin-right: 75px;
+       
         padding-top: 50px;
     }
 
