--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -100,7 +100,8 @@
   fill: #fbfbfb;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-svg-mob-menu:hover {
+.mob-menu-link-social:hover .icon-svg-mob-menu,
+.mob-menu-link-social:focus .icon-svg-mob-menu{
   fill: rgba(251, 251, 251, 0.8);
 }
 
