--- a/src/css/header.css
+++ b/src/css/header.css
@@ -40,7 +40,6 @@
     width: 704px;
     height: 48px;
     top: 32px;
-   
   }
   .mob-menu {
     display: none;
@@ -90,13 +89,13 @@
   .link-social-header {
     display: inline-flex;
   }
-  .icon-svg-header:hover,
-  .icon-svg-header:focus {
-    fill: #062730;
-  }
   .icon-svg-header {
     fill: #1b414b;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .link-social-header:hover .icon-svg-header,
+  .link-social-header:focus .icon-svg-header {
+    fill: #062730;
   }
 }
 
@@ -104,7 +103,6 @@
   .header-container {
     width: 1080px;
     height: 48px;
-   
   }
 }
 
