--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -79,7 +79,8 @@
   background-color: #1b414b;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mobile-menu-btn:hover {
+.mobile-menu-btn:hover,
+.mobile-menu-btn:focus {
   background-color: rgba(27, 65, 75, 0.5);
 }
 .mobile-menu-list-item:last-child {
@@ -101,7 +102,8 @@
   fill: #fbfbfb;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-svg-mob-menu:hover {
+.mob-menu-link-social .icon-svg-mob-menu:hover,
+.mob-menu-link-social .icon-svg-mob-menu:focus {
   fill: rgba(251, 251, 251, 0.8);
 }
 
