--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -2,15 +2,16 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: #0e1823;
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu.is-open-mobile-menu {
@@ -46,10 +47,10 @@
   padding-block: 12px;
 }
 .mob-menu-close{
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    display: inline-flex;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
 }
 .mob-menu-icon-close {
   fill: #055545;
