--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -143,14 +143,22 @@
 .reviews-list-item {
     background: #fbfbfb;
     border-radius: 24px;
-    min-width: 335px;
-    height: 282px;
+    min-width: 232px;
+    height: 345px;
     padding: 32px 8px;
+}
+
+@media screen and (min-width: 375px) {
+    .reviews-list-item {
+        min-width: 287px;
+        height: 310px;
+    }
 }
 
 @media screen and (min-width: 768px) {
     .reviews-list-item {
         min-width: 336px;
+        height: 282px;
     }
 }
 
