--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,19 +1,23 @@
+.container-absolute {
+}
+
 .header-container {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid #fbfbfb;
   border-radius: 8px;
+  background-color: #fbfbfb;
+  padding: 0 20px;
   width: 335px;
   height: 42px;
-  background-color: #fbfbfb;
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 0 30px;
-  z-index: 1000;
 }
+
 .logo-header {
   font-weight: 500;
   font-size: 14px;
@@ -40,6 +44,7 @@
     width: 704px;
     height: 48px;
     top: 32px;
+    padding: 0 28px;
   }
   .mob-menu {
     display: none;
@@ -103,6 +108,7 @@
   .header-container {
     width: 1080px;
     height: 48px;
+    padding: 0 30px;
   }
 }
 
