--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="page-header">
 
-  <div class="containe">
-    <div class="r header-container">
+  <div class="container">
+    <div class="header-container">
       <a class="logo-header logo-link" href="./index.html">yachtjet</a>
 
 
