--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -63,6 +63,7 @@
   }
   .hero {
     background-image: url('/img/hero-t_.jpg');
+    background-size: contain;
     /* padding: 280px 0px 282px; */
   }
   @media screen and (min-resolution: 2x) {
@@ -101,12 +102,14 @@
   }
   .hero {
     background-image: url('/img/hero-desk_.jpg');
+    background-size: cover;
     /* padding: 235px 0px 315px; */
   }
 }
 @media screen and (min-resolution: 2x) {
   .hero {
     background-image: url('/img/hero-desk@2x_.jpg');
+    
   }
 }
 
