--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,9 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #fbfbfb;
-  background-color:#0e1823;
+  background-color: #0e1823;
 }
 
+html {
+  scroll-behavior: smooth;
+}
