--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,15 +1,15 @@
-
 /* Styles for Mobile devices */
 .container {
   min-width: 320px;
-  max-width:375px;
+  max-width: 375px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
-@media only screen and (min-width: 375px)
-{
-  .container {max-width: 375px; }
+@media only screen and (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
@@ -25,8 +25,8 @@
     padding: 0 50px;
   }
 }
-@media only screen and (min-width: 1440px){
+@media only screen and (min-width: 1440px) {
   .container {
-      max-width: 1440px;
-    }
+    max-width: 1440px;
+  }
 }
