--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,3 @@
-
-
 .header-container {
   position: absolute;
   top: 20px;
@@ -13,7 +11,8 @@
   border-radius: 8px;
   background-color: #fbfbfb;
   padding: 0 20px;
-  width: 335px;
+  width: calc(100% - 40px);
+  max-width: 335px;
   height: 42px;
 }
 .logo-header {
@@ -41,9 +40,8 @@
 
 @media screen and (min-width: 768px) {
   .header-container {
-    width: 704px;
+    max-width: 704px;
     height: 48px;
-
     top: 32px;
   }
   .mob-menu {
@@ -106,7 +104,7 @@
 
 @media screen and (min-width: 1280px) {
   .header-container {
-    width: 1080px;
+    max-width: 1080px;
     height: 48px;
     padding: 0 30px;
   }
@@ -114,6 +112,6 @@
 
 @media screen and (min-width: 1440px) {
   .header-container {
-    width: 1240px;
+    max-width: 1240px;
   }
 }
