--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -23,8 +23,7 @@
             type="text"
             id="user-name"
             required
-            title="Yevhen"
-            pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+            pattern="^[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+(?: [a-zA-Zа-яА-ЯіІїЇєЄґҐ']+)*$"
           />
           <svg class="icon-modal" width="18" height="24">
             <use href="/img/icons.svg#icon-person"></use>
@@ -40,7 +39,7 @@
             type="tel"
             id="user-tel"
             required
-            pattern="^\+\d{2}-\d{3}-\d{3}-\d{2}-\d{2}$"
+            pattern="^\+\d{11,15}$"
           />
           <svg class="icon-modal" width="18" height="24">
             <use href="/img/icons.svg#icon-tel"></use>
