--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -15,7 +15,7 @@
                 id="user-name"
                 required
                 title="Yevhen"
-                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+                pattern="^[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+(?: [a-zA-Zа-яА-ЯіІїЇєЄґҐ']+)*$"
               />
             </div>
           </div>
@@ -45,7 +45,7 @@
                 type="tel"
                 id="user-tel"
                 required
-                pattern="^\+\d{2}-\d{3}-\d{3}-\d{2}-\d{2}$"
+                pattern="^\+\d{11,15}$"
               />
             </div>
           </div>
